[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A minimal template for Python projects using Poetry 🐍."
authors = ["Violet <vxvvn@proton.me>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "python_template", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
