[tool.poetry]
name = "template-python"
version = "0.1.0"
description = "A minimal template for Python projects 🐍."
authors = ["Violet <vxvt@proton.me>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "template_python", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
